--- a/osa2/poetry-web/pyproject.toml
+++ b/osa2/poetry-web/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = "^3.10"
 dependencies = [
     "flask (>=3.1.2,<4.0.0)",
     "pytest (>=8.4.2,<9.0.0)",
+    "cowsay (>=6.1,<7.0)",
 ]
 
 
